# pasarguard-panel

./: CONTRIBUTING.md  config.py
app/: app_factory.py
app/db/: models.py
app/db/crud/: extension.py
app/db/migrations/versions/: b7e4f2a1c9d0_add_extension_tables.py
app/extensions/: __init__.py  base.py  context.py  emit.py  exceptions.py  hooks.py  loader.py  models.py  protocols.py  registry.py  router.py
app/jobs/: review_users.py
app/models/: admin_role.py
app/operation/: extension.py  subscription.py  user.py
app/routers/: __init__.py  extension.py
app/templates/subscription/: index.html
dashboard/public/statics/locales/: en.json
dashboard/src/app/: router.tsx
dashboard/src/components/layout/: sidebar.tsx
dashboard/src/features/extensions/: types.ts
dashboard/src/features/extensions/components/: extension-host.tsx  extension-iframe.tsx
dashboard/src/features/extensions/hooks/: use-extensions.ts
dashboard/src/pages/: _dashboard.extensions.$extensionId.tsx  _dashboard.extensions.tsx
dashboard/src/utils/: rbac.ts
docs/extensions/: README.md  admin-ui.md  architecture.md  hooks.md  migration-guide.md  subscription-ui.md
extensions/example/: README.md  pyproject.toml
extensions/example/pasarguard_ext_example/: __init__.py  extension.py  router.py
extensions/example/pasarguard_ext_example/static/ui/: index.html
tests/api/: conftest.py  test_extensions.py  test_subscription_extensions.py
tests/extensions/: __init__.py  test_hook_bus.py  test_loader.py  test_registry.py
