[project]
name = "pasarguard-ext-example"
version = "1.0.0"
description = "Reference PasarGuard extension demonstrating hooks, admin UI, and subscription slots"
requires-python = ">=3.14"
dependencies = []

[project.entry-points."pasarguard.extensions"]
example = "pasarguard_ext_example.extension:ExampleExtension"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pasarguard_ext_example"]
